# Chef

./: .gitignore  README.md  pyproject.toml
chef/: app.py  config.py
chef/api/: jenkins.py
chef/database/: session.py
chef/database/models/: __init__.py  storages.py
chef/filehandle/: loader.py
cond.f/: nginx.conf
tests/: test_taipy.py
