[project]
name = "chef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.113",
    "docker>=7.1.0",
    "jenkinsapi>=0.3.13",
    "pandas>=2.2.2",
    "smart-open>=7.0.5",
    "sqlalchemy>=2.0.30",
    "taipy>=4.0.0",
]
